<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
              android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="22sp"
        android:layout_marginBottom="20dp"
        android:textColor="@android:color/black"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
    <Button
        style="@style/AppButton"
        android:text="@string/app_1_button"
        android:onClick="launchApp1"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app_2_button"
        android:onClick="launchApp2"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app_3_button"
        android:onClick="launchApp3"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app_4_button"
        android:onClick="launchApp4"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app_5_button"
        android:onClick="launchApp5"/>

    <Button
        style="@style/AppButton"
        android:text="@string/app_6_button"
        android:onClick="launchApp6"
        android:background="@color/capstone_button_background"
        android:textColor="@android:color/white"/>
</LinearLayout>
</ScrollView>
</LinearLayout>
